[package]
name = "blame-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10.0", features = ["dynamic_linking"]} # this enables fast compiles
rand = "0.8.5"


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this! we probably don't but yolo!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
